--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vergil/uc-client",
+    "name": "vergil-lai/uc-client",
     "require": {
         "guzzlehttp/guzzle": "~5.3|~6.0"
     },
